      the template symbol files are described in dpkg-gensymbols(1).
      Closes: #795163
    - Update field requirements of control file formats to match dpkg reality.
    - Document the format of the origins filename in deb-origin(5).
    - Add list of flags set by bug feature area to dpkg-buildflags(1).
    - Switch output encoding of man pages to UTF-8.

  [ Updated programs translations ]
  * Portuguese (Miguel Figueiredo).
  * Simplified Chinese (Zhou Mo). Closes: #809517
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Fri, 25 Dec 2015 14:20:16 +0100

dpkg (1.18.4) unstable; urgency=medium

  [ Guillem Jover ]
  * Switch dpkg-scansources and dpkg-scanpackages to use File::Find instead
    of find(1), as the former is more portable with more consistent behavior,
    and always canonicalizes the pathnames. Closes: #800649
  * Initialize Config-Version also for packages previously in triggers-pending
    state, otherwise we end up not passing the previously configured version
    to «postinst configure», which might consider this a first install instead
    of an upgrade. Closes: #801156
  * Fix memory leaks in «dpkg --verify» and dpkg infodb format upgrade logic.
  * Merge all update-alternatives action handling into a single if-else-if
    block, to unify the code an allow a future switch into a shared library.
  * Perform any necessary cleanups on normal exit from dpkg-divert --add and
    --remove commands.
  * Make dpkg-architecture warning on non-matching GNU system type compiler
    agnostic.
  * Add ‘.gitreview’ to the default dpkg-source ignore lists.
  * Add support for DPKG_MAINTSCRIPT_DEBUG environment variable to dpkg.
  * Fix dpkg-checkbuilddeps exit code to be 1 instead of a random error value
    on unsatisfied dependencies. Regression introduced in dpkg 1.18.3.