@@ -96,6 +96,7 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     - Document the format of the origins filename in deb-origin(5).
     - Add list of flags set by bug feature area to dpkg-buildflags(1).
     - Switch output encoding of man pages to UTF-8.
+    - Move SEE ALSO section to the end of Dpkg::Changelog::Debian.
 
   [ Updated programs translations ]
   * Portuguese (Miguel Figueiredo).
